fix: title borders, sections spacing

--- a/src/app/(with-footer)/(home)/_sections/AboutSection/AboutSection.module.css
+++ b/src/app/(with-footer)/(home)/_sections/AboutSection/AboutSection.module.css
@@ -1,14 +1,12 @@
 .title {
 	text-align: center;
-	margin-block-end: 32px;
 }
 
 .aboutMeWrapper {
+	display: flex;
+	flex-direction: column;
+	row-gap: 14px;
 	max-inline-size: 60ch;
-	margin-inline: auto;
+	margin: 32px auto 0;
 	font-size: clamp(1.125rem, 1.034rem + 0.388vw, 1.5rem);
-}
-
-.paragraph {
-	padding-block-start: 18px;
 }
